# Ecowatt-QC

./: LICENSE  ModelTraining.py  PrepareDatasetForTraining.py  README.md  StreamlitApp-Ecowatt-QC.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
Data/ElectricityDemand/: 2023-08-18_AllElectricityDemandData_2019_2022.csv  GetCurrentElectricityDemand.py  PrepareElectricityDemandDataset.py
Data/ElectricityProduction/: GetCurrentElectricityProduction.py
Data/HQ_ProductionCapacity/: 2023-08-18_HQcapacity.csv  GetHydroQuebecProductionCapacity.py
Data/Population/: 2023-08-18_PopStatAllYears  2023-08-18_SummaryPopStat  GetPopulationDataFromQC.py
Data/Weather/: 2023-08-18_AllWeatherData_2019_2022.csv  Gatineau_2019to2022.csv  GetWeatherDataFromWeatherCanada.py  GetWeatherDataFromWeatherCanadaWebsite.py  Montreal_2019to2022.csv  PrepareWeatherDataset.py  Quebec_2019to2022.csv  Saguenay_2019to2022.csv  Sherbrooke_2019to2022.csv  Trois-Rivieres_2019to2022.csv
docs/: api.md  contributing.md  index.md  structure.md  usage.md
