[project]
name = "ecowatt-qc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "lxml>=6.1.0",
    "matplotlib>=3.10.9",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "streamlit>=1.56.0",
    "workalendar>=17.0.0",
]
